syntax = "proto3";

package proto;

option go_package = "./pkg/pb";

enum ActionType {
  SPECIFIED = 0;
  RELATED = 1;
}

service BookGRPCHandler {
  rpc Fetch (BookIDModel) returns (BookRowsResponse) {}
  rpc Show (BookIDModel) returns  (BookRowResponse) {}
  rpc Store (BookAddRequest) returns (BookBoolResponse) {}
  rpc Update (BookModel) returns (BookBoolResponse) {}
  rpc Destroy (BookIDModel) returns (BookBoolResponse) {}
}

// The request message containing the user's name.
message BookModel {
  uint32 id = 1;
  uint32 store_id = 2;
  string name = 3;
}

message BookIDModel {
  uint32 id = 1;
  ActionType type = 2;
}

message BookAddRequest {
  uint32 store_id = 2;
  string name = 3;
}

message BookRowsResponse {repeated BookModel stores = 1;}
message BookRowResponse {BookModel store = 1;}
message BookBoolResponse {bool status = 1;}